<resources>
    <string name="app_name">Inspector Ticket App</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="title_activity_signin">Inspector Login</string>
    <string name="title_activity_signup">Inspector Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Display Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to shared preferences -->
    <string name="shared_preferences_user_sign_in">IsUserSignIn</string>
    <string name="shared_preferences_identifier">UserTicketAppSharedPreferences</string>
    <string name="shared_preferences_token_key">TokenKey</string>
    <string name="shared_preferences_user_id_key">UserIdKey</string>
    <string name="shared_preferences_user_email_key">UserEmailKey</string>
    <string name="shared_preferences_user_name_key">UserNameKey</string>
    <string name="log_out">Log out</string>
    <string name="welcome_inspector">Welcome to the inspector menu</string>
    <string name="download_tickets">Download ticket data</string>
    <string name="upload_tickets">Upload Stored tickets</string>
    <string name="validate_ticket_qr">Validate a ticket (QR Code)</string>
    <string name="validate_ticket_nfc">Validate a ticket (NFC)</string>
    <string name="see_ticket_stats">See ticket statistics</string>
    <string name="title_activity_scanned_ticket">Scanned Ticket</string>

    <string name="ticket_title_text">%1$s to %2$s</string>
    <string name="ticket_date_hours">%1$s, %2$02dh%3$02d</string>
    <string name="seat_number_text">Seat number %1$d</string>

    <string name="public_key">MEowDQYJKoZIhvcNAQEBBQADOQAwNgIvAM+yrP3EdnJEj/oyPvGEloubmv7HkHZq
EM4OyRRS6OT7CaxDPnkZoessO3Zb1FcCAwEAAQ==</string>

    <string name="invalid_ticket">Warning: Invalid ticket</string>
    <string name="valid_ticket">Ticket is signed and valid</string>
    <string name="ticket_user_name">Ticket signed to %1$s</string>
    <string name="ticket_user_email">Email: %1$s</string>
    <string name="ticket_no_details">Download details from server</string>
    <string name="ticket_marked_used">Ticket has been marked as used</string>
    <string name="title_activity_ticket_nfcscanner">Scan NFC Ticket</string>
    <string name="title_activity_statistics">Statistics</string>
</resources>
